--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </ul>
         </div>
     <ul>
-      <li><button id="proceed">Proceed to Payment</button></li>
+      <li><button type="button" id="proceed">Proceed to Payment</button></li>
       <li><a href=#>Cancel Order</a></li>
     </ul>
     </div>
